# sdl-pong

./: .gitignore  CMakeLists.txt  GameScene.cpp  GameScene.h  LICENSE  README.md  main.cpp
Components/: Ball.cpp  Ball.h  CMakeLists.txt  Entity.cpp  Entity.h  Paddle.cpp  Paddle.h  PlayingField.cpp  PlayingField.h  Score.cpp  Score.h
